overlap fix

--- a/views/style/user.css
+++ b/views/style/user.css
@@ -26,15 +26,25 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-top: 20px; 
+    margin-top: 20px;
+    padding-bottom: 20px;
   }
 
   div.bottom > .Left, div.bottom > .msgCon {
-    width: 100%; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px; 
+    width: 100%;
+    display: block; 
+    margin-bottom: 30px; 
+    padding: 10px 0;
+    box-sizing: border-box; 
+  }
+
+  .msgCon {
+    order: 2;
+  }
+
+  .Left {
+    order: 1; 
+    padding-bottom: 20px; 
   }
 }
 
